# boem-belugas-runtime

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build-containers.yml  build-images.yml  test-makefile.yml
benchmark_src/: main.py
data/: metadata.csv  query_scenarios.csv
data/databases/: scenario02.csv
data/queries/: scenario-01.csv  scenario01.csv  scenario02.csv
hydra_plugins/: whaledo_plugin.py
hydra_plugins/hydra_submitit_launcher/: config.py  submitit_launcher.py
notebooks/: requirements.txt
notebooks/script/: data-exploration-and-benchmark.py
runtime/: Dockerfile  apt.txt  entrypoint.sh  environment-cpu.yml  environment-gpu.yml
runtime/tests/: test_packages.py
scoring/: example_labels.csv  requirements.txt  score_submission.py
static_conf/checkpointer/: whaledo.yaml
static_conf/experiment/: moco.yaml  moco_lc.yaml  simclr.yaml
static_conf/hydra/launcher/: slurm_goedel.yaml  slurm_hydra.yaml  slurm_kyiv.yaml  slurm_turing.yaml
static_conf/logger/: whaledo.yaml
submission/: README.md  log.txt
submission_quickstart/: main.py
submission_src/: main.py  timm  whaledo
whaledo/: conf.py  metrics.py  optimizers.py  relay.py  schedulers.py  search.py  transforms.py  types.py  utils.py
whaledo/algorithms/: __init__.py  base.py  encoder.py  erm.py  loss.py  mean_teacher.py  memory_bank.py  moco.py  multicrop.py  simclr.py
whaledo/algorithms/self_supervised/: __init__.py  base.py  loss.py  moco.py  multicrop.py  simclr.py
whaledo/data/: __init__.py  datamodule.py  dataset.py  query_scenarios.csv  samplers.py
whaledo/data/databases/: scenario01.csv
whaledo/data/queries/: scenario01.csv
whaledo/data/test_data/queries/: scenario02.csv
whaledo/models/: __init__.py  artifact.py  backbones.py  base.py
whaledo/models/meta/: __init__.py  base.py  ema.py  ft.py
whaledo/models/predictors/: fcn.py
